<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NiUnDiaGratis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NiUnDiaGratis</string>
    <string name="nav_header_subtitle">juanAntonioVicentePastor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_sel_bbdd">Seleccionar base de datos</string>
    <string name="action_salir">Salir</string>

    <string name="menu_home">NiUnDiaGratis</string>
    <string name="menu_gest_act">Gestión de actividades</string>
    <string name="menu_gest_perm">Gestión de permisos</string>
    <string name="menu_gest_fest">Gestión de dias festivos</string>
    <string name="menu_config">Configuración</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Fragment_submenu01">Submenu01</string>
    <string name="fragment_add_actividad">Añadir actividad</string>
    <string name="add_tipo_actividad">Añadir tipo de actividad</string>
    <string name="fragment_add_permiso">Añadir permiso</string>
    <string name="fragment_add_festivo">Añadir día festivo</string>
    <string name="fragment_mod_tipoActividad">Modificar tipo de actividad</string>
    <string name="fragment_mod_selec">Modificar selección</string>
    <string name="fragment_mod_tipo_dia">Modificar tipo de día</string>
    <string name="fragment_add_tipo_dia">Añadir tipo de dia</string>
    <string name="fragment_mod_permiso">Modificar permiso</string>
    <string name="fragment_mod_festivo">Modificar día festivo</string>
    <string name="fragment_mod_actividad">Modificar actividad</string>
    <string name="txt_dias_PU">Días de otros permisos de unidad</string>


    <string name="opciones_1_gest_actividades">Gestión de actividades</string>
    <string name="opciones_1_act_btn1">Añadir actividad</string>
    <string name="opciones_1_act_btn2">Modificar actividad</string>

    <string name="opciones_1_gest_permisos">Gestión de permisos</string>
    <string name="opciones_1_perm_btn1">Añadir permiso</string>
    <string name="opciones_1_perm_btn2">Modificar permiso</string>

    <string name="opciones_1_gest_config">Configuración de datos</string>
    <string name="opciones_1_conf_btn1">Añadir configuración</string>
    <string name="opciones_1_conf_btn2">Modificar configuración</string>

    <string name="opciones_1_config_add_tipo">Añadir configuración</string>
    <string name="opciones_1_add_tipo_act_btn1">Añadir tipo de actividad</string>
    <string name="opciones_1_add_tipo_dia_btn2">Añadir tipo de dia</string>

    <string name="opciones_1_config_mod_tipo">Modificar configuración</string>
    <string name="opciones_1_mod_tipo_act_btn1">Modificar tipo de actividad</string>
    <string name="opciones_1_mod_tipo_dia_btn2">Modificar tipo de dia</string>

    <string name="opciones_1_gest_festivos">Gestión de dias festivos</string>
    <string name="opciones_1_fest_btn1">Añadir día festivo</string>
    <string name="opciones_1_fest_btn2">Modificar día festivo</string>

    <string name="spinner_tipo_dia">Seleccionar el tipo de día</string>
    <string name="btn_fecha_inicio">Seleccionar fecha de inicio</string>
    <string name="txtvw_fecha_inicio">Fecha de inicio</string>
    <string name="btn_fecha_fin">Seleccionar fecha de finalización</string>
    <string name="txtvw_fecha_fin">Fecha de finalización</string>

    <string name="tipo">Tipo</string>
    <string name="maximo">Máximo establecido</string>
    <string name="saldo_global">Saldo</string>
    <string name="fecha">Fecha</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_tipo_dia">Nombre del tipo de día</string>
    <string name="vacio">Sin datos</string>
    <string name="nombre_act">Nombre de la actividad</string>
    <string name="es_guardia">Es guardia</string>
    <string name="camb_fecha_ini">Cambiar fecha de inicio</string>
    <string name="camb_fecha_fin">Cambiar fecha de finalización</string>
    <string name="tipo_dia_1">Tipo de día 1</string>
    <string name="tipo_dia_2">Tipo de día 2</string>
    <string name="tipo_dia_3">Tipo de día 3</string>
    <string name="prop_dias_1">Proporcion de dias tipo 1</string>
    <string name="prop_dias_2">Proporcion de dias tipo 2</string>
    <string name="prop_dias_3">Proporcion de dias tipo 3</string>
    <string name="d_naturales">Son dias naturales</string>

    <string name="inicio">Inicio: %s</string>
    <string name="fin">Fin: %s</string>

    <string name="nombre_tipo_act">Nombre del tipo de actividad</string>
    <string name="max_dias">Cantidad máxima anual</string>
    <string name="btnGuardar">Guardar</string>
    <string name="aceptar">Aceptar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_delete">Eliminar</string>
    <string name="nombre_festivo">Nombre del día festivo</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <integer-array name="spinner_prop_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </integer-array>
    <integer-array name="spinner_max_items">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </integer-array>
</resources>