<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Sel_bbdd"
            android:title="@string/msg_sel_bbdd" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gest_act"
            android:title="@string/menu_gest_act" />
        <item
            android:id="@+id/nav_gest_perm"
            android:title="@string/menu_gest_perm" />
        <item
            android:id="@+id/nav_gest_fest"
            android:title="@string/menu_gest_fest" />
        <item
            android:id="@+id/nav_config"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/salir"
            android:title="@string/action_salir" />

    </group>
</menu>