<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModPermisoSeleccionadoFragment">


    <Button
        android:id="@+id/btnFechaFinPerm11"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="88dp"
        android:text="@string/btn_fecha_fin"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTipo11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerTipo11"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:prompt="@string/spinner_tipo_dia"
        app:layout_constraintBottom_toTopOf="@+id/checkBox11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGuardar11"
        android:layout_width="318dp"
        android:layout_height="75dp"
        android:layout_marginBottom="76dp"
        android:text="@string/btn_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFechaIniPerm11"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btn_fecha_inicio"
        app:layout_constraintBottom_toTopOf="@+id/btnFechaFinPerm11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox11"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="@string/d_naturales"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardar11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>