<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPermisoFragment">


    <Spinner
        android:id="@+id/spinnerTipo09"
        android:layout_width="360dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:prompt="@string/spinner_tipo_dia"
        app:layout_constraintBottom_toTopOf="@+id/checkBox09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonGuardar09"
        android:layout_width="318dp"
        android:layout_height="75dp"
        android:layout_marginBottom="84dp"
        android:text="@string/btn_calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFechaIniPerm09"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:text="@string/btn_fecha_inicio"
        app:layout_constraintBottom_toTopOf="@+id/btnFechaFinPerm09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/btnFechaFinPerm09"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:text="@string/btn_fecha_fin"
        app:layout_constraintBottom_toTopOf="@+id/spinnerTipo09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox09"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="@string/d_naturales"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardar09"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>