<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFestivoFragment">

    <EditText
        android:id="@+id/editTxtNombreFestivo"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/nombre_festivo"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <Button
        android:id="@+id/btnFechaFestivo"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginBottom="76dp"
        android:text="@string/fecha"
        app:layout_constraintBottom_toTopOf="@+id/editTxtNombreFestivo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGuardar18"
        android:layout_width="318dp"
        android:layout_height="75dp"
        android:layout_marginBottom="84dp"
        android:text="@string/btnGuardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>