<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableRow
        android:id="@+id/TableRow"
        android:layout_width="350dp"
        android:layout_height="18dp"
        android:background="@drawable/borde"
        app:layout_constraintBottom_toTopOf="@+id/rVComputo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_marginBaseline="9dp">

        <TextView
            android:id="@+id/txtTipo3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/tipo"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txtNombre3"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/maximo" />

        <TextView
            android:id="@+id/txtFecha3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/saldo_global"
            android:textAlignment="textStart" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="350dp"
        android:layout_height="18dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/borde"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rVActReal"
        app:layout_marginBaseline="9dp">

        <TextView
            android:id="@+id/txtTipo2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/tipo" />

        <TextView
            android:id="@+id/txtNombre2"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtFecha2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/fecha"
            android:textAlignment="textStart" />
    </TableRow>

    <TableRow
        android:id="@+id/TableRow1"
        android:layout_width="350dp"
        android:layout_height="18dp"
        android:background="@drawable/borde"
        app:layout_constraintBottom_toTopOf="@+id/rVActReal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="-1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_marginBaseline="9dp">

        <TextView
            android:id="@+id/txtTipo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/tipo" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nombre" />

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/fecha"
            android:textAlignment="textStart" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVActReal"
        android:layout_width="350dp"
        android:layout_height="287dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVGuardias"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/TableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVComputo"
        android:layout_width="350dp"
        android:layout_height="144dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>