<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.niundiagratis.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_submenu01Fragment"
            app:destination="@id/submenu01Fragment" />
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.niundiagratis.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/submenu01Fragment"
        android:name="com.example.niundiagratis.Submenu01Fragment"
        android:label="@string/Fragment_submenu01"
        tools:layout="@layout/fragment_submenu01" >
        <action
            android:id="@+id/action_submenu01Fragment_self"
            app:destination="@id/submenu01Fragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_addActividadFragment"
            app:destination="@id/addActividadFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_modActividadFragment"
            app:destination="@id/modActividadFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_addPermisoFragment"
            app:destination="@id/addPermisoFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_modPermisoFragment"
            app:destination="@id/modPermisoFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_addTipoActividadFragment"
            app:destination="@id/addTipoActividadFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_addTipoDiaFragment"
            app:destination="@id/addTipoDiaFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_modTipoActividadFragment"
            app:destination="@id/modTipoActividadFragment" />
        <action
            android:id="@+id/action_submenu01Fragment_to_modTipoDiaFragment"
            app:destination="@id/modTipoDiaFragment" />
    </fragment>
    <fragment
        android:id="@+id/addActividadFragment"
        android:name="com.example.niundiagratis.AddActividadFragment"
        android:label="@string/fragment_add_actividad"
        tools:layout="@layout/fragment_add_actividad" />
    <fragment
        android:id="@+id/modActividadFragment"
        android:name="com.example.niundiagratis.ModActividadFragment"
        android:label="@string/fragment_mod_actividad"
        tools:layout="@layout/fragment_mod_actividad" >
        <action
            android:id="@+id/action_modActividadFragment_to_modActividadSeleccionadaFragment"
            app:destination="@id/modActividadSeleccionadaFragment" />
    </fragment>
    <fragment
        android:id="@+id/modActividadSeleccionadaFragment"
        android:name="com.example.niundiagratis.ModActividadSeleccionadaFragment"
        android:label="fragment_mod_actividad_seleccionada"
        tools:layout="@layout/fragment_mod_actividad_seleccionada" />
    <fragment
        android:id="@+id/addPermisoFragment"
        android:name="com.example.niundiagratis.AddPermisoFragment"
        android:label="fragment_add_permiso"
        tools:layout="@layout/fragment_add_permiso" />
    <fragment
        android:id="@+id/modPermisoFragment"
        android:name="com.example.niundiagratis.ModPermisoFragment"
        android:label="fragment_mod_permiso"
        tools:layout="@layout/fragment_mod_permiso" >
        <action
            android:id="@+id/action_modPermisoFragment_to_modPermisoSeleccionadoFragment"
            app:destination="@id/modPermisoSeleccionadoFragment" />
    </fragment>
    <fragment
        android:id="@+id/modPermisoSeleccionadoFragment"
        android:name="com.example.niundiagratis.ModPermisoSeleccionadoFragment"
        android:label="fragment_mod_permiso_seleccionado"
        tools:layout="@layout/fragment_mod_permiso_seleccionado" />
    <fragment
        android:id="@+id/addTipoActividadFragment"
        android:name="com.example.niundiagratis.AddTipoActividadFragment"
        android:label="fragment_add_tipo_actividad"
        tools:layout="@layout/fragment_add_tipo_actividad" />
    <fragment
        android:id="@+id/addTipoDiaFragment"
        android:name="com.example.niundiagratis.AddTipoDiaFragment"
        android:label="fragment_add_tipo_dia"
        tools:layout="@layout/fragment_add_tipo_dia" />
    <fragment
        android:id="@+id/modTipoActividadFragment"
        android:name="com.example.niundiagratis.ModTipoActividadFragment"
        android:label="fragment_mod_tipo_actividad"
        tools:layout="@layout/fragment_mod_tipo_actividad" >
        <action
            android:id="@+id/action_modTipoActividadFragment_to_modTipoActividadSelecFragment"
            app:destination="@id/modTipoActividadSelecFragment" />
    </fragment>
    <fragment
        android:id="@+id/modTipoActividadSelecFragment"
        android:name="com.example.niundiagratis.ModTipoActividadSelecFragment"
        android:label="fragment_mod_tipo_actividad_selec"
        tools:layout="@layout/fragment_mod_tipo_actividad_selec" />
    <fragment
        android:id="@+id/modTipoDiaFragment"
        android:name="com.example.niundiagratis.ModTipoDiaFragment"
        android:label="fragment_mod_tipo_dia"
        tools:layout="@layout/fragment_mod_tipo_dia" >
        <action
            android:id="@+id/action_modTipoDiaFragment_to_modTipoDiaSelecFragment"
            app:destination="@id/modTipoDiaSelecFragment" />
    </fragment>
    <fragment
        android:id="@+id/modTipoDiaSelecFragment"
        android:name="com.example.niundiagratis.ModTipoDiaSelecFragment"
        android:label="fragment_mod_tipo_dia_selec"
        tools:layout="@layout/fragment_mod_tipo_dia_selec" />
    <action android:id="@+id/action_global_nav_home" app:destination="@id/nav_home" />
    <action android:id="@+id/action_global_submenu01Fragment" app:destination="@id/submenu01Fragment" />
</navigation>